objects/CSAPEN_Cisco_Strategic_Goal__c.object
<CustomObject>
    <fields>
        <fullName>Account_Plan_New__c</fullName>
        <label>Account Plan</label>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipLabel>Cisco Strategic Goals and Objectives</relationshipLabel>
        <relationshipName>Cisco_Strategic_Goals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Picklist to indicate the nature of this Cisco goal</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Channel</fullName>
                </value>
                <value>
                    <fullName>Strategic Alliance</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Relationship</fullName>
                </value>
                <value>
                    <fullName>Cisco Capital</fullName>
                </value>
                <value>
                    <fullName>Data Center/Virtualization</fullName>
                </value>
                <value>
                    <fullName>Collaboration</fullName>
                </value>
                <value>
                    <fullName>Borderless</fullName>
                </value>
                <value>
                    <fullName>Video</fullName>
                </value>
                <value>
                    <fullName>Vertical Reference Arch.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Initiative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Clickable reference to an existing Initiative within the same account plan that this Goal will help accomplish.</description>
        <label>Customer Initiative</label>
        <referenceTo>CSAPEN_Customer_Initiative__c</referenceTo>
        <relationshipName>R00N30000001VfTsEAK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data_Source_Name__c</fullName>
        <description>Data Migration Field: Used to generate reports, rollback data changes, mass data changes in SFDC etc</description>
        <label>Data Source Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <description>Date of completion of the goal.</description>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deployment_No__c</fullName>
        <description>Data Migration Field: Used to generate reports, rollback data changes, mass data changes in SFDC etc</description>
        <label>Deployment No</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Objective_1_Other_Information__c</fullName>
        <description>Other information related to Cisco Objectives for the Account.</description>
        <label>Objective 1 Other Information</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Objective_1_Result__c</fullName>
        <description>Results related to Cisco Objectives for the Account.</description>
        <label>Objective 1 Result</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Objective_1_Strategy__c</fullName>
        <description>Cisco Strategies for the Account.</description>
        <label>Objective 1 Strategy</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Objective_1_Tactics__c</fullName>
        <description>Cisco Tactics for the Account.</description>
        <label>Objective 1 Tactics</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Objective_1__c</fullName>
        <description>Objective associated with Cisco Strategic Goal</description>
        <label>Objective 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Objective_2_Other_Information__c</fullName>
        <description>Other information related to Cisco Objectives for the Account.</description>
        <label>Objective 2 Other Information</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Objective_2_Result__c</fullName>
        <description>Results related to Cisco Objectives for the Account.</description>
        <label>Objective 2 Result</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Objective_2_Strategy__c</fullName>
        <description>Cisco Strategies for the Account.</description>
        <label>Objective 2 Strategy</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Objective_2_Tactics__c</fullName>
        <description>Cisco Tactics for the Account.</description>
        <label>Objective 2 Tactics</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Objective_2__c</fullName>
        <description>Objective associated with Cisco Strategic Goal</description>
        <label>Objective 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Objective_3_Other_Information__c</fullName>
        <description>Other information related to Cisco Objectives for the Account.</description>
        <label>Objective 3 Other Information</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Objective_3_Result__c</fullName>
        <description>Results related to Cisco Objectives for the Account.</description>
        <label>Objective 3 Result</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Objective_3_Strategy__c</fullName>
        <description>Cisco Strategies for the Account.</description>
        <label>Objective 3 Strategy</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Objective_3_Tactics__c</fullName>
        <description>Cisco Tactics for the Account.</description>
        <label>Objective 3 Tactics</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Objective_3__c</fullName>
        <description>Objective associated with Cisco Strategic Goal</description>
        <label>Objective 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Information__c</fullName>
        <description>Field used to capture any other important information relevant to better understand, and track the goal.</description>
        <label>Other Information</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_URL__c</fullName>
        <description>URL field for link to other relevant information.</description>
        <label>Other URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Clickable reference to an existing Cisco Salesforce.com user to indicate the internal Cisco owner of this goal.</description>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N30000001VfTtEAK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SiteMapIdentifier__c</fullName>
        <description>Determines how the record displays on the site map</description>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SiteMapIdentifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Account_Plan_Id__c</fullName>
        <description>Data Migration Field: Used to generate reports, rollback data changes, mass data changes in SFDC etc</description>
        <label>Source Account Plan Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Cisco_Strat_Goal_Id__c</fullName>
        <description>Data Migration Field: Used to generate reports, rollback data changes, mass data changes in SFDC etc</description>
        <label>Source Cisco Strat Goal Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Cust_Init_Id__c</fullName>
        <description>Data Migration Field: Used to generate reports, rollback data changes, mass data changes in SFDC etc</description>
        <label>Source Cust Init Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of goal</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Timeframe__c</fullName>
        <description>This field was added as a part of July release. Reference QW 3114. This field is to pull out the timeframe details for the PPT generator</description>
        <label>Timeframe</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0-12 Months</fullName>
                </value>
                <value>
                    <fullName>12 -18 Months</fullName>
                </value>
                <value>
                    <fullName>18-36 Months</fullName>
                </value>
                <value>
                    <fullName>3-5 Years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>Cisco Strategic Goal and Objectives</description>
    <label>Cisco Strategic Goal and Objectives</label>
    <nameField>
        <label>Cisco Goal</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cisco Strategic Goals and Objectives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>